RESOLVED FIXED47137
Notification onclick() events don't act like user gestures
https://bugs.webkit.org/show_bug.cgi?id=47137
Summary Notification onclick() events don't act like user gestures
Andrew Wilson
Reported 2010-10-04 18:20:06 PDT
I am trying to focus a window in the onclick handler for a notification, but it fails because WebKit doesn't think notification.onclick is a user gesture. The problem is that Event::fromUserGesture() is returning false because UserGestureIndicator::processingUserGesture() is returning false. I think the fix is to add a line like this to WebNotification::dispatchClickEvent(): UserGestureIndicator gestureIndicator(DefinitelyProcessingUserGesture); I have a patch locally that does this which I'll try out tomorrow. I can make this change for the qt client also - is there any place else I need to touch?
Attachments
Updated chromium and qt notification implementations to mark click events as user gestures. (3.20 KB, patch)
2010-10-05 09:45 PDT, Andrew Wilson
no flags
Andrew Wilson
Comment 1 2010-10-05 09:45:57 PDT
Created attachment 69799 [details] Updated chromium and qt notification implementations to mark click events as user gestures.
Yael
Comment 2 2010-10-05 10:10:20 PDT
Thank you for fixing it for Qt. Looks good to me (but I am not a reviewer :-)
John Gregg
Comment 3 2010-10-05 10:19:49 PDT
Patch looks good for chromium too (also not a reviewer).
Andreas Kling
Comment 4 2010-10-05 13:21:11 PDT
Comment on attachment 69799 [details] Updated chromium and qt notification implementations to mark click events as user gestures. LGTM, too. Thanks Yael and John!
WebKit Commit Bot
Comment 5 2010-10-05 13:41:29 PDT
Comment on attachment 69799 [details] Updated chromium and qt notification implementations to mark click events as user gestures. Clearing flags on attachment: 69799 Committed r69143: <http://trac.webkit.org/changeset/69143>
WebKit Commit Bot
Comment 6 2010-10-05 13:41:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.