2010-10-05  Andrew Wilson  <atwilson@chromium.org>

Reviewed by Andreas Kling.

        Notification onclick() events don't act like user gestures
        https://bugs.webkit.org/show_bug.cgi?id=47137

        * src/WebNotification.cpp:
        (WebKit::WebNotification::dispatchClickEvent):
        Use UserGestureIndicator to make sure click events are treated like user gestures.
2010-10-05  Andrew Wilson  <atwilson@chromium.org>

        Reviewed by Andreas Kling.

        Notification onclick() events don't act like user gestures
        https://bugs.webkit.org/show_bug.cgi?id=47137

        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        (WebCore::NotificationPresenterClientQt::notificationClicked):
        Use UserGestureIndicator to make sure click events are treated like user gestures.

git-svn-id: svn://svn.chromium.org/blink/trunk@69143 bbb929c8-8fbe-4397-9dbb-9b2b20218538