third_party/WebKit/WebKit/chromium/src/WebNotification.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if ENABLE(NOTIFICATIONS)
 
 #include "Notification.h"
+#include "UserGestureIndicator.h"
 
 #include "WebString.h"
 #include "WebTextDirection.h"
@@ -141,6 +142,8 @@ void WebNotification::dispatchCloseEvent(bool /* byUser */)
 
 void WebNotification::dispatchClickEvent()
 {
+    // Make sure clicks on notifications are treated as user gestures.
+    UserGestureIndicator gestureIndicator(DefinitelyProcessingUserGesture);
     RefPtr<Event> event = Event::create(eventNames().clickEvent, false, true);
     m_private->dispatchEvent(event.release());
 }
