third_party/WebKit/WebKit/qt/WebCoreSupport/NotificationPresenterClientQt.cpp
@@ -41,6 +41,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "QtPlatformPlugin.h"
 #include "ScriptExecutionContext.h"
 #include "SecurityOrigin.h"
+#include "UserGestureIndicator.h"
 
 #include "qwebframe_p.h"
 #include "qwebkitglobal.h"
@@ -263,8 +264,11 @@ void NotificationPresenterClientQt::cancel(NotificationWrapper* wrapper)
 void NotificationPresenterClientQt::notificationClicked(NotificationWrapper* wrapper)
 {
     Notification* notification =  notificationForWrapper(wrapper);
-    if (notification)
+    if (notification) {
+        // Make sure clicks on notifications are treated as user gestures.
+        UserGestureIndicator gestureIndicator(DefinitelyProcessingUserGesture);
         sendEvent(notification, eventNames().clickEvent);
+    }
 }
 
 void NotificationPresenterClientQt::notificationClicked(const QString& title)
